--- a/app/src/main/res/drawable-anydpi/ic_button_deletehour.xml
+++ b/app/src/main/res/drawable-anydpi/ic_button_deletehour.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="20dp"
+    android:height="20dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/BaseTurquoise"
+    android:tint="@color/Black"
     android:alpha="0.8">
   <group android:scaleX="1.25"
       android:scaleY="1.25"
