--- a/app/src/main/res/drawable/background_message_left.xml
+++ b/app/src/main/res/drawable/background_message_left.xml
@@ -7,6 +7,6 @@
         android:topLeftRadius="3dp"/>
 
     <solid
-        android:color="@color/BaseTurquoise"/>
+        android:color="@color/White"/>
 
 </shape>
