--- a/app/src/main/res/layout/admin_phone_register.xml
+++ b/app/src/main/res/layout/admin_phone_register.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/llayout"
+        android:id="@+id/registerLayout"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:gravity="center_vertical"
         android:layout_below="@+id/toolbar"
         android:padding="16dp"
         android:visibility="visible">
@@ -47,7 +47,7 @@
             android:text="Submit"
             android:id="@+id/btn_register"
             android:layout_marginTop="10dp"
-            android:background="@color/BaseTurquoise"
+            android:background="@color/gradientBlue"
             android:textColor="#ffffff"/>
 
     </LinearLayout>
@@ -55,9 +55,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/phoneAuth"
+        android:id="@+id/codeVerifLayout"
         android:orientation="vertical"
-        android:layout_below="@+id/llayout"
+        android:layout_below="@+id/registerLayout"
         android:gravity="center_vertical"
         android:visibility="gone">
 
@@ -80,7 +80,7 @@
             android:text="Continue"
             android:id="@+id/btn_continue"
             android:layout_marginTop="10dp"
-            android:background="@color/BaseTurquoise"
+            android:background="@color/gradientBlue"
             android:textColor="#ffffff"
             android:layout_below="@id/codeText"/>
 
