--- a/app/src/main/res/layout/fragment_monday.xml
+++ b/app/src/main/res/layout/fragment_monday.xml
@@ -1,64 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/Grey"
     android:theme="@android:style/Animation.Activity"
     style="@style/CustomActivityAnimation">
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/mondayRecyclerView"-->
-<!--        android:layout_below="@id/dropdown_weekdays"/>-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/BasePink"
+        android:background="@color/BLuish"
         android:theme="@style/AppTheme.AppBarOverlay">
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/monday_frame"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/linear_layout_weekdays">
+        android:layout_height="match_parent">
 
-<!--    <Spinner-->
-<!--        android:id="@+id/dropdown_weekdays"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center_horizontal"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:gravity="center_horizontal"-->
-<!--        android:spinnerMode="dropdown"-->
-<!--        android:textAlignment="center"-->
-<!--        android:textSize="20dp"-->
-<!--        android:layout_above="@id/main_frame"/>-->
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="15dp"
-        android:elevation="10dp"
-        app:backgroundTint="@color/BasePink"
-        android:src="@drawable/ic_button_add"
-        android:id="@+id/btn_add"
-        android:tooltipText="Add course"
-        android:onClick="onClick"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_time"
+                android:gravity="center_horizontal"
+                android:padding="5dp"
+                android:textSize="20dp"
+                android:textColor="@color/Black"
+                android:background="@color/cardview_light_background"/>
+        </FrameLayout>
 
-    </FrameLayout>
+    </ScrollView>
 
-    <TimePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:timePickerMode="spinner"
-        android:visibility="gone"/>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
 
