--- a/app/src/main/res/layout/user_phone_register.xml
+++ b/app/src/main/res/layout/user_phone_register.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/llayout"
+        android:id="@+id/registerLayout"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:gravity="center_vertical"
         android:layout_below="@+id/toolbar"
         android:padding="16dp"
         android:visibility="visible">
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Register / Sign In"
+            android:text="@string/registerLogin"
             android:textColor="#000"
             android:textSize="20dp"
             android:textStyle="bold"/>
@@ -27,10 +27,20 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
+            android:id="@+id/firstName"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Username"/>
+            android:hint="@string/firstName"
+            android:autofillHints="firstName"/>
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lastName"
+            android:layout_marginTop="10dp"
+            app:met_floatingLabel="normal"
+            android:hint="@string/lastName"
+            android:autofillHints="lastName"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
@@ -39,7 +49,8 @@
             android:inputType="phone"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Phone Number"/>
+            android:hint="Phone Number"
+            android:autofillHints="phoneNumber"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
@@ -57,7 +68,7 @@
             android:text="Submit"
             android:id="@+id/btn_register"
             android:layout_marginTop="10dp"
-            android:background="@color/BaseTurquoise"
+            android:background="@color/gradientBlue"
             android:textColor="#ffffff"/>
 
     </LinearLayout>
@@ -67,7 +78,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/phoneAuth"
         android:orientation="vertical"
-        android:layout_below="@+id/llayout"
+        android:layout_below="@+id/codeVerifLayout"
         android:gravity="center_vertical"
         android:visibility="gone">
 
@@ -90,7 +101,7 @@
         android:text="Continue"
         android:id="@+id/btn_continue"
         android:layout_marginTop="10dp"
-        android:background="@color/BaseTurquoise"
+        android:background="@color/gradientBlue"
         android:textColor="#ffffff"
         android:layout_below="@id/codeText"/>
 
