--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="BasePink">#FFE484A5</color>
     <color name="Black">#000</color>
     <color name="White">#fff</color>
     <color name="BaseTurquoise">#32a891</color>
+    <color name="BLuish">#99d5dd</color>
+    <color name="AnotherBlue">#2ec3d7</color>
+    <color name="ChatBlue">#e0edf3</color>
+
+    <color name="gradientBlue">#12919e</color>
+
+    <color name="Grey">#f5f5f5</color>
 </resources>
